correct spacing and sizing, finish landing section

--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -4,6 +4,7 @@
 body {
   line-height: 1.3;
   font-family: 'Public Sans', sans-serif;
+  font-weight: 300;
   font-size: $font-med;
   color: $grayishBlue;
 }
