--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -11,7 +11,7 @@
   z-index: 1000;
 
   nav {
-    padding: 1.0625rem 1.5rem;
+    padding: 1.375rem;
   }
 
   &__logo {
@@ -69,15 +69,15 @@
   &__mobile--burger {
     > span {
       display: block;
-      width: 26px;
-      height: 2px;
+      width: 1.56rem;
+      height: 1px;
       background-color: $darkBlue;
       opacity: 0.75;
       transform-origin: 3px 1px;
       transition: all 200ms ease-in-out;
 
       &:not(:last-child) {
-        margin-bottom: 5px;
+        margin-bottom: 4px;
       }
     }
     &:hover {
